United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6939182 Zero JNI handles fix
6939182 : Zero JNI handles fix

Details
Type:
Bug
Submit Date:
2010-03-30
Status:
Closed
Updated Date:
2012-10-08
Project Name:
JDK
Resolved Date:
2010-05-18
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs18
Fixed Versions:
hs19

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
Gary Benson wrote:

Hi all,

Zero will exit with an error when invoked with -Xcheck:jni.
This webrev fixes:

  http://cr.openjdk.java.net/~gbenson/zero-jnihandles-fix/

Note that this is actually a pretty old issue, but the fix
for it got lost from the IcedTea repositories.  There's more
information here:

  http://icedtea.classpath.org/bugzilla/show_bug.cgi?id=323

I don't have a bug id for this.

Cheers,
Gary

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/0c5b3cf3c1f5
                                     
2010-04-30



Hardware and Software, Engineered to Work Together