6939182: Zero JNI handles fix

Zero will exit with an error when invoked with -Xcheck:jni.

Reviewed-by: twisti, kamg